--- a/src/LobStripeTile/LobStripeTile.css
+++ b/src/LobStripeTile/LobStripeTile.css
@@ -71,6 +71,7 @@
   font-size: var(--body-body-s-regular-font-size, 0.875rem);
   line-height: var(--body-body-s-regular-line-height, 1rem);
   font-weight: var(--body-body-s-regular-font-weight, 400);
+  white-space: nowrap;
   position: relative;
 }
 
